# UnityPhysXPlugin

./: README.md
NVIDIA.PhysX.Native/: CMakeLists.txt
NVIDIA.PhysX.Native/Helpers/: Helpers.cpp  Helpers.h
NVIDIA.PhysX.Native/Interface/: Native.i
NVIDIA.PhysX.Native/Wrapper/: NativeCSHARP_wrap.cxx  NativeCSHARP_wrap.h
NVIDIA.PhysX/Wrapper/: NativePINVOKE.cs  PxActor.cs  PxArticulationFlag.cs  PxArticulationJointType.cs  PxArticulationLink.cs  PxArticulationReducedCoordinate.cs  PxBVH33MidphaseDesc.cs  PxBVHStructure.cs  PxBaseTask.cs  PxBroadPhaseCallback.cs  PxConcreteType.cs  PxConstraint.cs  PxConstraintInvMassScale.cs  PxContactPairFlag.cs  PxContactPairHeader.cs  PxContactPairList.cs  PxConvexFlag.cs  PxConvexMesh.cs  PxConvexMeshCookingType.cs  PxConvexMeshGeometryFlag.cs  PxD6JointDrive.cs  PxDefaultErrorCallback.cs  PxDefaultMemoryInputData.cs  PxDefaultSimulationFilterShader.cs  PxDistanceJoint.cs  PxErrorCallback.cs  PxFilterData.cs  PxFilterFlag.cs  PxForceMode.cs  PxGeometry.cs  PxGeometryHolder.cs  PxGeometryType.cs  PxHeightFieldDesc.cs  PxHeightFieldFormat.cs  PxHeightFieldGeometry.cs  PxHullPolygon.cs  PxInputData.cs  PxInputStream.cs  PxJointLimitParameters.cs  PxJointLinearLimit.cs  (+30 more)
Unity/PhysX Plugin/Assets/NVIDIA/PhysX Samples/API Samples/Scripts/: SampleCarouselGRB.cs  SampleContactReport.cs  SampleHelloGRB.cs
Unity/PhysX Plugin/Assets/NVIDIA/PhysX/Runtime/: EnumFlagAttribute.cs  Extensions.cs  PxDependency.cs  PxPhysics.cs
Unity/PhysX Plugin/Assets/NVIDIA/PhysX/Runtime/Assets/: PxAsset.cs  PxBoxShape.cs  PxCapsuleShape.cs  PxCompoundShape.cs  PxConvexMesh.cs  PxConvexMeshShape.cs  PxConvexShape.cs  PxHeightField.cs  PxHeightFieldShape.cs  PxMaterial.cs  PxPlaneShape.cs  PxSettings.cs  PxShape.cs  PxSimpleShape.cs  PxSolidShape.cs  PxSphereShape.cs  PxTriangleMesh.cs  PxTriangleMeshShape.cs
Unity/PhysX Plugin/Assets/NVIDIA/PhysX/Runtime/Components/: PxActor.cs  PxArticulatedActor.cs  PxComponent.cs  PxD6Joint.cs  PxDynamicActor.cs  PxFixedJoint.cs  PxJoint.cs  PxScene.cs  PxStaticActor.cs  PxStaticBoxActor.cs
Unity/PhysX Plugin/Assets/NVIDIA/PhysX/Runtime/Wrapper/: NVIDIA.PhysX.dll.disabled
Unity/PhysX Plugin/Assets/NVIDIA/PhysX/Runtime/Wrapper/Wrapper/: Native.cs  NativePINVOKE.cs  Px1DConstraint.cs  PxActorCollision.cs  PxActorFlag.cs  PxActorList.cs  PxActorShape.cs  PxActorTypeFlag.cs  PxAggregate.cs  PxAllocatorCallback.cs  PxArticulation.cs  PxArticulationAxis.cs  PxArticulationBase.cs  PxArticulationCache.cs  PxArticulationDriveCache.cs  PxArticulationDriveType.cs  PxArticulationJoint.cs  PxArticulationJointBase.cs  PxArticulationJointDriveType.cs  PxArticulationJointReducedCoordinate.cs  PxArticulationMotion.cs  PxArticulationRootLinkData.cs  PxBVH34MidphaseDesc.cs  PxBVHStructureDesc.cs  PxBase.cs  PxBaseFlag.cs  PxBoundedData.cs  PxBounds3.cs  PxBoxGeometry.cs  PxBroadPhaseCallback.cs  PxBroadPhaseCaps.cs  PxBroadPhaseRegion.cs  PxBroadPhaseRegionInfo.cs  PxBroadPhaseType.cs  PxCapsuleGeometry.cs  PxCombineMode.cs  PxConstraintConnector.cs  PxConstraintFlag.cs  PxConstraintInfo.cs  PxConstraintInfoList.cs  (+117 more)
